--- a/src/app/components/competition-page/competition-page.component.sass
+++ b/src/app/components/competition-page/competition-page.component.sass
@@ -5,3 +5,19 @@
 
 .parent
     margin-bottom:10%
+
+
+.ui.centered.grid.container
+    position: fixed
+    z-index: 9999
+    background: rgba(0,0,0,0.9)
+    top: 0
+    left: 0
+    height: 100%
+    width: 100% !important
+    margin: 0 !important
+    overflow-y: auto
+
+.ui.segment
+    top: 50%
+    transform: translateY(-50%)
