--- a/src/app/components/user-timeline/user-timeline.component.sass
+++ b/src/app/components/user-timeline/user-timeline.component.sass
@@ -32,6 +32,12 @@
     margin-bottom:2%
     z-index: 9999
 
+.messagepl
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+
 @media (min-width: 1024px)
     .two.wide.column
         width: 0 !important
