--- a/src/app/components/create-event/create-event.component.html
+++ b/src/app/components/create-event/create-event.component.html
@@ -21,7 +21,7 @@
                      </div>
                     </div>
                     <div class="field">
-                      <label>Competition Date</label>
+                      <label>Event Date</label>
                       <input matInput [matDatepicker]="datepicker"
                              formControlName="date">
                       <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
