--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,8 +30,18 @@
               </a>
             </p>
             <p class="control">
-              <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.8.0/bulma-0.8.0.zip">
-                <a href="/timeline"><span>Timeline</span></a>
+              <a class="button is-primary" [routerLink]="['/myEvents']">
+                <span>Events</span>
+              </a>
+            </p>
+            <p class="control">
+              <a class="button is-primary" [routerLink]="['/ties']">
+                <span>Ties</span>
+              </a>
+            </p>
+            <p class="control">
+              <a class="button is-primary" [routerLink]="['/profile',userId]">
+                <span>Profile</span>
               </a>
             </p>
             <p class="control">
