--- a/src/app/components/competitions-tab/competitions-tab.component.sass
+++ b/src/app/components/competitions-tab/competitions-tab.component.sass
@@ -10,7 +10,6 @@
     margin-right: 4% !important
 
 .imagecontainer
-    background: url('../../../assets/signup.jpg')
-    background-size: cover
-    background-repeat: no-repeat
-    background-position: center center
+    background-size: cover !important
+    background-repeat: no-repeat !important
+    background-position: center center !important
